; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/lua/src/extr_ldblib.c_getthread.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/lua/src/extr_ldblib.c_getthread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @getthread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @getthread(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i64 @lua_isthread(i32* %6, i32 1)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32*, i32** %5, align 8
  store i32 1, i32* %10, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = call i32* @lua_tothread(i32* %11, i32 1)
  store i32* %12, i32** %3, align 8
  br label %16

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  store i32 0, i32* %14, align 4
  %15 = load i32*, i32** %4, align 8
  store i32* %15, i32** %3, align 8
  br label %16

16:                                               ; preds = %13, %9
  %17 = load i32*, i32** %3, align 8
  ret i32* %17
}

declare dso_local i64 @lua_isthread(i32*, i32) #1

declare dso_local i32* @lua_tothread(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
